src/examples/test-doubles/ReturnArgumentExampleTest.php.out
./tools/phpunit tests/ReturnArgumentExampleTest.php
PHPUnit 12.0-gf9a0e9f860 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.4.1

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 23.21 MB

There was 1 error:

1) ReturnArgumentExampleTest::testReturnArgumentStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ReturnArgumentExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
